welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = 
	var j:Int=0
	while(nums(indexOfValue(nums ,6))+1==nums(indexOfValue(nums ,7))){
		j= j+1
	}
	while(nums(indexOfValue(nums ,6)+1)==nums(indexOfValue(nums ,6))){
		j= j+1
	}

	return j
	



}


def indexOfValue(nums:Array[Int] ,value:Int): Boolean = {
	var i = 0
  while(i < nums.length && nums(i) != value){
  	i = i + 1
  }
  if(i < nums.length){
  	return true 
  }else{
  	return false
  }
}


//var j:Int=0
//	while(indexOfValue(nums ,lookingFor)){
//		j= j+1
//	}

//	return j
	



//}


//def indexOfValue(nums:Array[Int] ,value:Int): Boolean = {
//	var i = 0
//  while(i < nums.length && nums(i) != value){
 // 	i = i + 1
//  }
 // if(i < nums.length){
 // 	return true 
 // }else{
 // 	return false
//  }
//}


